--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <link rel="icon" href="icons8-pc-96.png">
     </head>
     <body>
-        <div class="cloack">
+        <button class="cloack" onclick="location.href='lesson1.html'">
             <div class="wing1"></div>
             <div class="wing2"></div>
-        </div>
+        </button>
         <button class="dark" onclick="location.href='index light.html'"></button>
         <a href="https://developer0071.github.io/Units/" class="btn1" >Unit words</a>
+        <button class="btn3" onclick="location.href='remark.html'">Remark</button>
         <a href="https://developer0071.github.io/listenings/" class="btn2" >Listening words</a>
     </body>
 </html>
