--- a/remark.html
+++ b/remark.html
@@ -28,6 +28,8 @@
             width: 100%;
             max-width: 800px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            overflow-y: auto; /* Enable scrolling */
+            max-height: 80vh; /* Limit height for scrolling */
         }
         h1 {
             margin-bottom: 20px;
@@ -134,10 +136,11 @@
                 font-size: 2em;
             }
             .task {
-                padding: 10 px;
+                padding: 10px;
             }
         }
 
+ ```html
         @media (max-width: 480px) {
             .input, .unitInput {
                 margin-right: 0;
@@ -163,50 +166,62 @@
                 margin-top: 5px;
             }
         }
-.navbar{
-    font-size: 30px;
-    position: absolute;
-    justify-content:center;
-    align-items: center;
-    display: flex;
-    width: 170px;
-    top: 0;
-    height: 50px;
-    margin: 10px;
-    border-radius: 50px;
-    background: transparent;
-    color: rgb(255, 255, 255);
-    text-shadow:
-    0 0 3px rgb(39, 0, 0),
-    0 0 5px rgb(255, 255, 255);
-    border: solid 1px rgb(61, 61, 61);
-    box-shadow: 
-    0 0 10px rgb(61, 61, 61),
-    inset 20px 20px 10px rgb(61, 61, 61),
-    0 0 15px rgb(61, 61, 61);
-    cursor: pointer;
-    transition: all .9s;
-    text-decoration: none;
-}
-.navbar:hover{
-    box-shadow: 
-    0 0 10px rgb(61, 61, 61),
-    inset -20px -20px 10px rgb(61, 61, 61),
-    0 0 15px rgb(61, 61, 61);    
-    transform: scale(1.1);
-}
-.navbar:active{
-    box-shadow: 
-    0 0 10px rgb(61, 61, 61),
-    inset -20px -20px 10px rgb(61, 61, 61),
-    0 0 15px rgb(61, 61, 61);    
-    transform: scale(1.3);
-}
+        .navbar {
+            font-size: 30px;
+            position: absolute;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            width: 170px;
+            top: 0;
+            height: 50px;
+            margin: 10px;
+            border-radius: 50px;
+            background: transparent;
+            color: rgb(255, 255, 255);
+            text-shadow:
+            0 0 3px rgb(39, 0, 0),
+            0 0 5px rgb(255, 255, 255);
+            border: solid 1px rgb(61, 61, 61);
+            box-shadow: 
+            0 0 10px rgb(61, 61, 61),
+            inset 20px 20px 10px rgb(61, 61, 61),
+            0 0 15px rgb(61, 61, 61);
+            cursor: pointer;
+            transition: all .9s;
+            text-decoration: none;
+        }
+        .navbar:hover {
+            box-shadow: 
+            0 0 10px rgb(61, 61, 61),
+            inset -20px -20px 10px rgb(61, 61, 61),
+            0 0 15px rgb(61, 61, 61);    
+            transform: scale(1.1);
+        }
+        .navbar:active {
+            box-shadow: 
+            0 0 10px rgb(61, 61, 61),
+            inset -20px -20px 10px rgb(61, 61, 61),
+            0 0 15px rgb(61, 61, 61);    
+            transform: scale(1.3);
+        }
+
+        /* New styles for loading indicator */
+        .loading {
+            text-align: center;
+            padding: 10px;
+            display: none; /* Hidden by default */
+        }
+
+        /* Animation for scrolling */
+        .scrolling {
+            transition: transform 0.5s ease-in-out;
+        }
     </style>
 </head>
 <body>
     <a href="https://developer0071.github.io/16.30/" class="navbar">🏡</a>
-    <div class="container">
+    <div class="container" id="taskContainer">
         <h1>Please write the words that you wanted to learn</h1>
         <div class="input_div">
             <input class="input" type="text" placeholder="Write what word it is." id="taskInput">
@@ -214,6 +229,7 @@
             <button class="addButton" id="addButton">+</button>
         </div>
         <div id="taskContainer"></div>
+        <div class="loading" id="loading">Loading more tasks...</div>
     </div>
 
     <script>
@@ -221,11 +237,14 @@
         const taskInput = document.getElementById('taskInput');
         const unitInput = document.getElementById('unitInput');
         const taskContainer = document.getElementById('taskContainer');
+        const loadingIndicator = document.getElementById('loading');
+        let currentTasks = []; // Keep track of loaded tasks
 
         // Load tasks from localStorage
         const loadTasks = () => {
             const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
             tasks.forEach(task => createTaskElement(task.text, task.unit, task.completed));
+            currentTasks = tasks; // Store loaded tasks
         };
 
         // Save tasks to localStorage
@@ -303,8 +322,27 @@
             }
         });
 
+        // Infinite scrolling functionality
+        const handleScroll = () => {
+            if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 100) {
+                loadingIndicator.style.display = 'block'; // Show loading indicator
+                setTimeout(() => {
+                    loadMoreTasks();
+                    loadingIndicator.style.display = 'none'; // Hide loading indicator
+                }, 1000); // Simulate loading time
+            }
+        };
+
+        const loadMoreTasks = () => {
+            const tasksToLoad = currentTasks.slice(taskContainer.children.length, taskContainer.children.length + 5);
+            tasksToLoad.forEach(task => createTaskElement(task.text, task.unit, task.completed));
+        };
+
         // Load tasks when the page is loaded
         window.onload = loadTasks;
+
+        // Add scroll event listener
+        window.addEventListener('scroll', handleScroll);
     </script>
 </body>
 </html>
