--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Welcome</title>
-        <link rel="stylesheet" href="page1.css">
-        <link rel="icon" href="icons8-pc-96.png">
-    </head>
-    <body>
-        <button class="cloack" onclick="location.href='lesson1.html'">
-            <div class="wing1"></div>
-            <div class="wing2"></div>
-        </button>
-        <button class="dark" onclick="location.href='index light.html'"></button>
-        <a href="https://developer0071.github.io/Units/" class="btn1" >Unit words</a>
-        <button class="btn2" onclick="location.href='remark.html'">Remark</button>
-        <a href="https://developer0071.github.io/listenings/" class="btn2" >Listening words</a>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <link rel="icon" href="icons8-pc-96.png">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+    <script src="script.js" defer></script> <!-- Link to external JavaScript -->
+</head>
+<body>
+    <h1>Welcome</h1>
+    <div class="quote"></div>
+    <div class="clock">
+        <div class="hand hour"></div>
+        <div class="hand minute"></div>
+        <div class="hand second"></div>
+    </div>
+    <button class="btn btn1" onclick="location.href='https://developer0071.github.io/Units/'">Unit Words</button>
+    <button class="btn btn2" onclick="location.href='https://developer0071.github.io/listenings/'">Listening Words</button>
+    <button class="btn btn3" onclick="location.href='remark.html'">Remark</button>
+</body>
 </html>
