--- a/remark.html
+++ b/remark.html
@@ -40,8 +40,9 @@
             display: flex;
             justify-content: space-between;
             margin-bottom: 20px;
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
         }
-        .input, .unitInput {
+        .frst, .unitInput {
             padding: 15px;
             border: 1px solid #444;
             border-radius: 5px;
@@ -50,22 +51,26 @@
             flex: 1;
             margin-right: 10px;
             font-size: 1.2em;
+            min-width: 150px; /* Minimum width for inputs */
         }
-        .input:focus, .unitInput:focus {
+        .frst:focus, .unitInput:focus {
             background-color: #444;
             outline: none;
         }
         .addButton {
-            background-color: #1e88e5;
+            background-color: #313d47;
             color: white;
             padding: 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             font-size: 1.5em;
+            min-width: 60px; /* Minimum width for button */
+            transition: transform 0.2s ease; /* Button animation */
         }
         .addButton:hover {
-            background-color: #1565c0;
+            background-color: #2c3a4b;
+            transform: scale(1.05); /* Scale effect on hover */
         }
         .task {
             display: flex;
@@ -91,15 +96,18 @@
             cursor: pointer;
             margin-left: 5px; /* Reduced margin */
             font-size: 0.9em; /* Smaller font size */
+            transition: transform 0.2s ease; /* Button animation */
         }
         .deleteButton:hover {
             background-color: #c62828;
+            transform: scale(1.05); /* Scale effect on hover */
         }
         .doneButton {
             background-color: #4caf50;
         }
         .doneButton:hover {
             background-color: #388e3c;
+            transform: scale(1.05); /* Scale effect on hover */
         }
 
         /* Animation for adding and removing tasks */
@@ -116,7 +124,7 @@
             opacity: 1;
             transform: translateY(0);
         }
-        .task-leave-active {
+        .task-leave -active {
             opacity: 0;
             transform: translateY(-20px);
             transition: opacity 0.2s ease, transform 0.2s ease;
@@ -124,13 +132,15 @@
 
         /* Media Queries for Responsiveness */
         @media (max-width: 768px) {
-            .input, .unitInput {
+            .frst, .unitInput {
                 margin-right: 5px;
                 font-size: 1em;
+                min-width: 100%; /* Full width on smaller screens */
             }
             .addButton {
                 font-size: 1.2em;
                 padding: 10px;
+                min-width: 100%; /* Full width on smaller screens */
             }
             h1 {
                 font-size: 2em;
@@ -140,12 +150,11 @@
             }
         }
 
- ```html
         @media (max-width: 480px) {
-            .input, .unitInput {
+            .frst , .unitInput {
                 margin-right: 0;
                 margin-bottom: 10px;
-                width: 100%;
+                width: 80%;
             }
             .input_div {
                 flex-direction: column;
@@ -167,64 +176,53 @@
             }
         }
         .navbar {
-            font-size: 30px;
-            position: absolute;
-            justify-content: center;
-            align-items: center;
-            display: flex;
-            width: 170px;
-            top: 0;
-            height: 50px;
-            margin: 10px;
-            border-radius: 50px;
-            background: transparent;
-            color: rgb(255, 255, 255);
-            text-shadow:
-            0 0 3px rgb(39, 0, 0),
-            0 0 5px rgb(255, 255, 255);
-            border: solid 1px rgb(61, 61, 61);
-            box-shadow: 
-            0 0 10px rgb(61, 61, 61),
-            inset 20px 20px 10px rgb(61, 61, 61),
-            0 0 15px rgb(61, 61, 61);
-            cursor: pointer;
-            transition: all .9s;
-            text-decoration: none;
-        }
-        .navbar:hover {
-            box-shadow: 
-            0 0 10px rgb(61, 61, 61),
-            inset -20px -20px 10px rgb(61, 61, 61),
-            0 0 15px rgb(61, 61, 61);    
-            transform: scale(1.1);
-        }
-        .navbar:active {
-            box-shadow: 
-            0 0 10px rgb(61, 61, 61),
-            inset -20px -20px 10px rgb(61, 61, 61),
-            0 0 15px rgb(61, 61, 61);    
-            transform: scale(1.3);
-        }
+            border-radius: 40px;
+        font-size: 18px;
+        position: fixed; /* Keep it fixed at the top */
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        width: 130px; /* Full width */
+        padding: 10px 0; /* Padding for top and bottom */
+        top: 0; /* Stick to the top */
+        background: rgba(255, 255, 255, 0.1);
+        color: #ffffff;
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+        border-bottom: 5px solid rgba(255, 255, 255, 0.3); /* Bottom border for separation */
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+        transition: background 0.3s, transform 0.2s;
+        transition: all .2s ease-in-out;
+    }
+.navbar:active{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3); /* Bottom border for separation */
+    transition: all .1s ease-in-out;
+}
+    .navbar a {
+        color: #ffffff; /* Ensure link color is white */
+        text-decoration: none; /* Remove underline */
+        padding: 10px 20px; /* Padding around the button */
+        border-radius: 25px; /* Rounded corners */
+        transition: background 0.3s, transform 0.2s; /* Smooth transitions */
+    }
 
-        /* New styles for loading indicator */
-        .loading {
-            text-align: center;
-            padding: 10px;
-            display: none; /* Hidden by default */
-        }
+    .navbar a:hover {
+        background: rgba(255, 255, 255, 0.2);
+        transform: scale(1.05);
+    }
 
-        /* Animation for scrolling */
-        .scrolling {
-            transition: transform 0.5s ease-in-out;
-        }
+    .navbar a:active {
+        transform: scale(0.95);
+    }
     </style>
+    <script src="js.js"></script>
 </head>
 <body>
     <a href="https://developer0071.github.io/16.30/" class="navbar">🏡</a>
     <div class="container" id="taskContainer">
         <h1>Please write the words that you wanted to learn</h1>
         <div class="input_div">
-            <input class="input" type="text" placeholder="Write what word it is." id="taskInput">
+            <input class="frst" type="text" placeholder="Write what word it is." id="taskInput">
             <input class="unitInput" type="text" placeholder="write is it from Units/listenings" id="unitInput">
             <button class="addButton" id="addButton">+</button>
         </div>
