--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Welcome</title>
     <link rel="icon" href="icons8-pc-96.png">
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
     <script src="script.js" defer></script> <!-- Link to external JavaScript -->
+    <script src="script1.js" defer></script> <!-- Link to external JavaScript -->
 </head>
 <body>
     <h1>Welcome</h1>
@@ -17,7 +19,8 @@
         <div class="hand second"></div>
     </div>
     <button class="btn btn1" onclick="location.href='https://developer0071.github.io/Units/'">Unit Words</button>
-    <button class="btn btn3" onclick="location.href='remark.html'">Remark</button>
     <button class="btn btn2" onclick="location.href='https://developer0071.github.io/listenings/'">Listening Words</button>
+    <button class="btn btn3" onclick="location.href='remark.html'">Remark</button>
+    <div class="snow-container"></div>
 </body>
 </html>
