--- a/remark.html
+++ b/remark.html
@@ -194,8 +194,12 @@
         transition: background 0.3s, transform 0.2s;
         transition: all .2s ease-in-out;
     }
+.navbar:hover{
+    border-bottom: 2px solid rgba(255, 255, 255, 0.3); /* Bottom border for separation */
+    transition: all .1.4s ease-in-out;
+}
 .navbar:active{
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3); /* Bottom border for separation */
+    border-bottom: .4px solid rgba(255, 255, 255, 0.3); /* Bottom border for separation */
     transition: all .1s ease-in-out;
 }
     .navbar a {
@@ -227,7 +231,7 @@
             <button class="addButton" id="addButton">+</button>
         </div>
         <div id="taskContainer"></div>
-        <div class="loading" id="loading">Loading more tasks...</div>
+        <div class="loading" id="loading">WORDS:</div>
     </div>
 
     <script>
