--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button class="btn btn1" onclick="location.href='https://developer0071.github.io/Units/'">Unit Words</button>
     <button class="btn btn2" onclick="location.href='https://developer0071.github.io/listenings/'">Listening Words</button>
     <button class="btn btn3" onclick="location.href='remark.html'">Remark</button>
+    <button class="btn btn3" onclick="location.href='https://developer0071.github.io/vocabluries/'">V/CH</button>
     <div class="snow-container"></div>
 </body>
 </html>
